<resources>
    <string name="app_name">Strada</string>
    //main menu strings
    <string name="news">News</string>
    <string name="speed">Speed</string>
    <string name="equalizer">Equalizer</string>
    <string name="settings">Settings</string>
    <string name="vehicle">Vehicle</string>

    <string name="add_car">Add car</string>
    <string name="add_car_description">add car description</string>
    <string name="equalizer_description">equalizer description</string>
    <string name="speed_description">speed description</string>
    <string name="news_description">news description</string>

    //news logs strings
    <string name="failed_to_load_users">Failed to load users</string>
    <string name="try_again">Try again</string>
    <string name="no_users">No User</string>
    <string name="user_has_been_deleted">User has been deleted</string>
    <string name="cant_load_user_details">Can\'t load user details</string>
    <string name="cant_delete_user">Can\'t delete user</string>
    <string name="cant_move_user">Can\'t move user</string>
    <string name="cant_fire_user">Can\'t fire user</string>
    //onBoarding strings
    <string name="speed_limit">Speed limit warning</string>
    <string name="desc_speed_limit">The choice of a speed that does not correspond to road conditions, one of the most frequent causes of road accidents.</string>
    <string name="destructed">Do not be destructed</string>
    <string name="desc_destructed">Answering calls or interacting with other car gadgets, the driver loses concentration.</string>
    <string name="permissions">Allow permissions</string>
    <string name="desc_permissions">To correctly display the correct speed of your movement, you must provide the device with access to location.</string>
    <string name="next_button">Next</string>
    <string name="some_description_about_app">some description about app</string>
    <string name="get_started_text">Get Started</string>
    <string name="on_boarding_image">On boarding image</string>

    <string name="pref">pref</string>
    //Sign In strings
    <string name="community_title">Welcome to Strada</string>
    <string name="community_description">Login with your Google account and get a pleasant experience from using our application.</string>
    <string name="skip">Skip</string>
    <string name="information">Information</string>
    <string name="information_description">Authentication is allowed to share and save your sound profile settings for a specific vehicle. The data is not confidential and is stored in Google services.</string>
    <string name="community_question"><u>Why use an account?</u></string>
    <string name="accept">Accept</string>
    //Add car fragment
    <string name="add_car_warning_text">You don\'t have cars in the list yet, click on the icon to add it</string>
    <string name="name_of_car">Name of car</string>
    <string name="brand_of_car">Brand of car</string>
    <string name="space">&#160;</string>
    <string name="chosen_profile">Chosen profile:</string>
    <string name="name_of_profile">none</string>
    <string name="package_value">package</string>
    <string name="model_of_car">Model of car</string>
    <string name="it_s_fab_button">it\'s FAB button</string>
    <string name="brand_car_item">Brand car item</string>
    <string name="warning_add_car">Looks like you didn\'t add a car\nto add, click on the plus</string>
    //Car Item fragment
    <string name="save">Save</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="edit_vehicle">Edit vehicle</string>
    <string name="hint_name">Name:</string>
    <string name="hint_brand">Brand:</string>
    <string name="hint_model">Model:</string>
    <string name="invalid_profile">Invalid profile</string>
    <string name="invalid_brand">Invalid brand</string>
    <string name="invalid_model">Invalid model</string>
    //News item fragment
    <string name="date_image">date image</string>
    <string name="date_text">01 January 1990</string>
    <string name="news_text_title">News text title</string>
    <string name="news_text_description">News text description</string>
    <string name="news_text_source">News text source</string>
    <string name="news_text_time">news text time</string>
    <string name="news_text_author">News text author</string>
    <string name="news_image">news image</string>
    <string name="news_image_shadow">news image shadow</string>
    <string name="marker_dot"> \u2022 </string>
    <string name="news_url_clipboard_text">News url copied in clipboard</string>
    <string name="share">Share</string>
    <string name="text_copied_label">your_text_to_be_copied_label</string>
    //Speed (main) fragment
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="speed_indicator">0.0</string>

    //Settings Fragment
    <string name="settings_item_information">settings item information</string>
    <string name="account">Account</string>
    <string name="settings_account_desc">Logging in or out\nof your account</string>
    <string name="version_app">Version: 1.0.0</string>
    <string name="contact_information">Contact with me:\nKozlov Artyom\nartyom.ch.ch@gmail.com</string>
    <string name="load_error">Oops, can\'t load data</string>
    <string name="animation_view_button_start">animation_view_button_start</string>

    //Permission dialog
    <string name="permission_granted">Location permissions is granted</string>
    <string name="open_app_settings">Open</string>
    <string name="forever_denied">Permission are denied forever</string>
    <string name="permission_denied">Permission denied</string>
    <string name="warning_permission_denied_dialog">You have denied permissions forever. You can change your decision in app settings\n\n
        Would you like to open app settings?</string>
    <string name="sorting">sorting</string>
    <string name="filter">filter</string>
    <string name="my_garage">My garage</string>
    <string name="s">Speed</string>
    <string name="searching">search</string>
    <string name="state_as_default">Set as default</string>
    <string name="add_new_car">Add new car:</string>
    <string name="edit_current_car">Edit current car:</string>
    <string name="settings_profile">settings_profile</string>


</resources>