<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sorting"
        android:contentDescription="@string/sorting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        android:contentDescription="@string/filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/searching"
        android:contentDescription="@string/searching"
        app:showAsAction="ifRoom" />

<!--    <item-->
<!--        android:id="@+id/account"-->
<!--        android:icon="@drawable/ic_user_avatar"-->
<!--        android:title="@string/no_users"-->
<!--        android:contentDescription="@string/no_users"-->
<!--        app:showAsAction="ifRoom" />-->
</menu>