<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#F4F4F4"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_news"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/news_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/author_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/news_text_author"
                android:textColor="#F1F1F1"
                app:layout_constraintBottom_toBottomOf="@+id/image_news"
                app:layout_constraintStart_toStartOf="@+id/image_news" />

            <ImageView
                android:id="@+id/shadow_bottom"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/news_image_shadow"
                android:src="@drawable/shadow_bottom"
                app:layout_constraintBottom_toBottomOf="@+id/image_news"
                app:layout_constraintEnd_toEndOf="@+id/image_news"
                app:layout_constraintStart_toStartOf="@+id/image_news" />

            <ProgressBar
                android:id="@+id/news_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/image_news"
                app:layout_constraintEnd_toEndOf="@+id/image_news"
                app:layout_constraintStart_toStartOf="@+id/image_news"
                app:layout_constraintTop_toTopOf="@+id/image_news" />

            <FrameLayout
                android:id="@+id/layout_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_white"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/image_news"
                app:layout_constraintEnd_toEndOf="@+id/image_news">

                <ImageView
                    android:id="@+id/change_element"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/date_image"
                    android:src="@drawable/ic_baseline_date" />

                <TextView
                    android:id="@+id/published_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/date_text"
                    android:textColor="#606060" />


            </FrameLayout>

            <TextView
                android:id="@+id/title_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/news_text_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_news" />

            <TextView
                android:id="@+id/desc_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/news_text_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_news" />

            <TextView
                android:id="@+id/source_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/news_text_source"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_news" />

            <TextView
                android:id="@+id/time_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/news_text_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/source_news" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>