<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/onBoardingImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dustructed"
        android:contentDescription="@string/on_boarding_image" />


    <TextView
        android:id="@+id/onBoardingMainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/speed_limit"
        android:textColor="@color/black"
        android:textSize="@dimen/main_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/onBoardingDescription"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal|top"
        android:text="@string/desc_destructed"
        android:fontFamily="@font/raleway"
        android:textSize="@dimen/standard_size"
        android:textColor="@color/onBoardingTextColorDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingMainText"/>
</androidx.constraintlayout.widget.ConstraintLayout>